// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <Component
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Search user by login,email or name"
      value=""
    />
    <div
      className="page-action-bar__spacer"
    />
  </div>
</div>
`;

exports[`Render should render pending invites button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <Component
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Search user by login,email or name"
      value=""
    />
    <div
      style={
        Object {
          "marginLeft": "1rem",
        }
      }
    >
      <RadioButtonGroup
        onChange={[MockFunction]}
        options={
          Array [
            Object {
              "label": "Users",
              "value": "users",
            },
            Object {
              "label": "Pending Invites (5)",
              "value": "invites",
            },
          ]
        }
        value="users"
      />
    </div>
    <div
      className="page-action-bar__spacer"
    />
  </div>
</div>
`;

exports[`Render should show external user management button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <Component
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Search user by login,email or name"
      value=""
    />
    <div
      className="page-action-bar__spacer"
    />
    <LinkButton
      href="some/url"
      rel="noopener"
      target="_blank"
    />
  </div>
</div>
`;

exports[`Render should show invite button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <Component
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Search user by login,email or name"
      value=""
    />
    <div
      className="page-action-bar__spacer"
    />
    <LinkButton
      href="org/users/invite"
    >
      Invite
    </LinkButton>
  </div>
</div>
`;
